# pr-context-engine

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  action.yml  pyproject.toml
.claude/commands/: publish-pypi.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pr-review.yml  release.yml
docs/: architecture.md  design-decisions.md
src/: __init__.py  cli.py  config.py
src/analyzers/: __init__.py  ast_walker.py  diff_parser.py  risk_scorer.py
src/briefing/: __init__.py  generator.py  prompt_templates.py
src/context/: __init__.py  codebase_index.py  git_history.py
src/fixes/: __init__.py  confidence.py  fix_generator.py
src/github_api/: __init__.py  comment_poster.py
src/llm/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  groq_provider.py  ollama_provider.py
tests/eval/: rubric.md  scores.jsonl  test_briefings.py
tests/eval/fixtures/: 01-simple-refactor.json  02-auth-middleware.json  03-db-migration.json  04-config-update.json  05-public-api-deleted.json  06-hardcoded-api-key.json  07-token-in-url.json  08-retry-no-limit.json  09-missing-null-check.json  10-trivial-docfix.json  11-multi-flag.json  12-new-endpoint.json  13-auth-bypass.json  14-env-file-update.json  15-dependency-update.json
tests/unit/: test_anthropic_provider.py  test_ast_walker.py  test_briefing_generator.py  test_build_prompt.py  test_codebase_index.py  test_config.py  test_diff_parser.py  test_failover_provider.py  test_fix_generator.py  test_gemini_provider.py  test_git_history.py  test_groq_provider.py  test_ollama_provider.py  test_risk_scorer.py
