[project]
name = "pr-context-engine"
version = "0.1.0"
description = "An AI tool that reads every PR and posts a senior-engineer-style briefing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "requests>=2.32",
    "groq>=0.13",
    "pygithub>=2.4",
    "python-dotenv>=1.0",
]

[project.scripts]
pr-context-engine = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
