[project]
name = "pr-context-engine"
version = "0.1.0"
description = "An AI tool that reads every PR and posts a senior-engineer-style briefing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "requests>=2.32",
    "groq>=0.13",
    "pygithub>=2.4",
    "python-dotenv>=1.0",
    "google-genai>=1.0",
    "anthropic>=0.40",
    "fastembed>=0.4",
    "sqlite-vec>=0.1",
]

[project.scripts]
pr-context-engine = "src.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
