[project]
name = "pr-context-engine"
version = "0.1.0"
description = "An AI tool that reads every PR and posts a senior-engineer-style briefing."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Kautsar", email = "paramahastha@gmail.com" }]
keywords = ["github", "pull-request", "code-review", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "typer>=0.12",
    "requests>=2.32",
    "groq>=0.13",
    "pygithub>=2.4",
    "python-dotenv>=1.0",
    "google-genai>=1.0",
    "anthropic>=0.40",
    "fastembed>=0.4",
    "sqlite-vec>=0.1",
]

[project.urls]
Homepage = "https://github.com/paramahastha/pr-context-engine"
Repository = "https://github.com/paramahastha/pr-context-engine"
Issues = "https://github.com/paramahastha/pr-context-engine/issues"
Changelog = "https://github.com/paramahastha/pr-context-engine/blob/main/CHANGELOG.md"

[project.scripts]
pr-context-engine = "src.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
